--- a/ms-bootstrap.html
+++ b/ms-bootstrap.html
@@ -138,17 +138,17 @@
     </section>
   
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">The Weekly Mail Strategy</h5>
+                <h5 class="modal-title" id="videoModalLabel">The Weekly Mail Strategy</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body video-wrapper">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ArtUN9RAVX4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="videoPlayer" width="560" height="315" src="https://www.youtube.com/embed/ArtUN9RAVX4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <!-- <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -164,5 +164,24 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function(){
+          /* Get iframe src attribute value i.e. YouTube video url
+            and store it in a variable */
+          var url = $("#videoPlayer").attr('src');
+
+          /* Assign empty url value to the iframe src attribute when
+            modal hide, which stop the video playing */
+          $("#videoModal").on('hide.bs.modal', function(){
+            $("#videoPlayer").attr('src', '');
+          });
+
+          /* Assign the initially stored url back to the iframe src
+            attribute when modal is displayed again */
+          $("#videoModal").on('show.bs.modal', function(){
+            $("#videoPlayer").attr('src', url);
+          });
+        });
+    </script>
   </body>
 </html>
